# MBot-Lidar-Autonomous-Navigation

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  docker_build.sh  docker_run.sh
autonomous_navigation/: CMakeLists.txt
autonomous_navigation/include/autonomous_navigation/graph_search/: graph_search.h
autonomous_navigation/include/autonomous_navigation/potential_field/: distance_transform.h  local_search.h  potential_field.h
autonomous_navigation/include/autonomous_navigation/robot/: robot.h
autonomous_navigation/include/autonomous_navigation/utils/: graph_utils.h  math_helpers.h  server_utils.h
autonomous_navigation/lib/simple-ws-server/: README.md
autonomous_navigation/src/: robot_plan_path.cpp  robot_potential_field.cpp  web_server.cpp
autonomous_navigation/src/graph_search/: graph_search.cpp
autonomous_navigation/src/potential_field/: distance_transform.cpp  local_search.cpp  potential_field.cpp
autonomous_navigation/src/tests/: test_graph.cpp
autonomous_navigation/src/utils/: graph_utils.cpp
data/: cropped_map.map
data/tests/: test_input.txt
omnibot_msgs/: CMakeLists.txt
omnibot_msgs/lcmtypes/: occupancy_grid_t.lcm  omni_motor_command_t.lcm  pose_xyt_t.lcm  robot_path_t.lcm
